--- a/Resources/Prototypes/Reagents/toxins.yml
+++ b/Resources/Prototypes/Reagents/toxins.yml
@@ -425,28 +425,18 @@
           groups:
             Airloss: 10
 # WL species start
-        # Android
         conditions:
         - !type:MetabolizerTypeCondition
-          type: [ Biorobotic ]
-          inverted: true
-        # Golem
-        - !type:MetabolizerTypeCondition
-          type: [ Golem ]
+          type: [ Biorobotic, Golem]
           inverted: true
 # WL species end
       - !type:ModifyLungDamage # Offbrand
         amount: 2
 # WL species start
-        # Android
         conditions:
-        - !type:OrganType
-          type: Biorobotic
-          shouldHave: false
-        # Golem
-        - !type:OrganType
-          type: Golem
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Biorobotic, Golem]
+          inverted: true
 # WL species end
 
 
@@ -651,20 +641,21 @@
       statusEffects:
       - statusEffect: StatusEffectHeartStrainRomerol
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       effects:
       - !type:AdjustReagent
         reagent: Romerol
         amount: -10
         conditions:
-        - !type:IsZombie
+        - !type:IsZombieCondition
       - !type:AdjustReagentGaussian
         reagent: Romerol
         μ: 0.35
         σ: 0.1
         conditions:
-        - !type:IsZombieImmune
+        - !type:IsZombieImmuneCondition
           invert: true
       - !type:PopupMessage
         type: Local
@@ -676,14 +667,16 @@
         - zombification-30-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:HealthChange
         damage:
           types:
              Poison: 0.15
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:ModifyHeartDamage
         amount: 2
@@ -704,39 +697,46 @@
           mobstate: Critical
       - !type:Zombify
         conditions:
-        - !type:BrainDamage
+        - !type:BrainDamageCondition
           min: 70
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:ModifyBrainDamage
         amount: 0.5
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:ModifyHeartDamage
         amount: 0.2
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:ModifyLungDamage
         amount: 0.2
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:AdjustTemperature
         amount: 3000
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 15
       - !type:Jitter
         probability: 0.25
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 30
       - !type:AdjustTemperature
         amount: 6000
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 30
       - !type:PopupMessage
         type: Local
@@ -748,12 +748,14 @@
         - zombification-60-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 30
       - !type:ModifyBrainDamage
         amount: 0.25
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 45
       - !type:HealthChange
         damage:
@@ -762,7 +764,8 @@
              Blunt: 0.15
              Piercing: 0.15
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 45
       - !type:PopupMessage
         type: Local
@@ -774,12 +777,14 @@
         - zombification-90-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 45
       - !type:ModifyBrainDamage
         amount: 0.5
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 60
       - !type:PopupMessage
         type: Local
@@ -791,12 +796,14 @@
         - zombification-120-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 60
       - !type:ModifyBrainDamage
         amount: 5
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteCondition
+          reagent: Romerol
           min: 70
       - !type:Zombify
         conditions:
