--- a/Resources/Prototypes/Reagents/toxins.yml
+++ b/Resources/Prototypes/Reagents/toxins.yml
@@ -641,7 +641,7 @@
       statusEffects:
       - statusEffect: StatusEffectHeartStrainRomerol
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       effects:
@@ -667,7 +667,7 @@
         - zombification-30-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:HealthChange
@@ -675,7 +675,7 @@
           types:
              Poison: 0.15
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:ModifyHeartDamage
@@ -699,43 +699,43 @@
         conditions:
         - !type:BrainDamageCondition
           min: 70
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:ModifyBrainDamage
         amount: 0.5
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:ModifyHeartDamage
         amount: 0.2
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:ModifyLungDamage
         amount: 0.2
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:AdjustTemperature
         amount: 3000
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 15
       - !type:Jitter
         probability: 0.25
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 30
       - !type:AdjustTemperature
         amount: 6000
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 30
       - !type:PopupMessage
@@ -748,13 +748,13 @@
         - zombification-60-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 30
       - !type:ModifyBrainDamage
         amount: 0.25
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 45
       - !type:HealthChange
@@ -764,7 +764,7 @@
              Blunt: 0.15
              Piercing: 0.15
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 45
       - !type:PopupMessage
@@ -777,13 +777,13 @@
         - zombification-90-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 45
       - !type:ModifyBrainDamage
         amount: 0.5
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 60
       - !type:PopupMessage
@@ -796,13 +796,13 @@
         - zombification-120-message-4
         probability: 0.05
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 60
       - !type:ModifyBrainDamage
         amount: 5
         conditions:
-        - !type:MetaboliteCondition
+        - !type:ReagentCondition # WL-Changes: Metabolite -> Reagent
           reagent: Romerol
           min: 70
       - !type:Zombify
